styles/custom.css
/**/
/* ==============================================
   FONTS
   ============================================== */

@font-face {
    font-family: 'ChanticleerRomanNF Bold';
    src: url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF-Bold.eot');
    src: 
    url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF-Bold.woff') format('woff'),
    url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF-Bold.woff2') format('woff2'),
    url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF-Bold.ttf') format('truetype'),
    url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF-Bold.svg#filename') format('svg');
}

@font-face {
    font-family: 'ChanticleerRomanNF';
    src: url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF.eot');
    src: 
    url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF.woff') format('woff'),
    url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF.woff2') format('woff2'),
    url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF.ttf') format('truetype'),
    url('fonts/chanticleerRomanNF/hinted-ChanticleerRomanNF.svg#filename') format('svg');
}

@font-face {
    font-family: 'Cliche';
    src: url('fonts/cliche/hinted-Cliche-Regular.eot');
    src: 
    url('fonts/cliche/hinted-Cliche-Regular.woff') format('woff'),
    url('fonts/cliche/hinted-Cliche-Regular.woff2') format('woff2'),
    url('fonts/cliche/hinted-Cliche-Regular.ttf') format('truetype'),
    url('fonts/cliche/hinted-Cliche-Regular.svg#filename') format('svg');
}

@font-face {
    font-family:'Enge Holzschrift-Shadow';
    src: url('fonts/EngeHolzschrift/hinted-EngeHolzschrift-Shadow.eot');
    src: 
    url('fonts/EngeHolzschrift/hinted-EngeHolzschrift-Shadow.woff') format('woff'),
    url('fonts/EngeHolzschrift/hinted-EngeHolzschrift-Shadow.woff2') format('woff2'),
    url('fonts/EngeHolzschrift/hinted-EngeHolzschrift-Shadow.ttf') format('truetype'),
    url('fonts/EngeHolzschrift/hinted-EngeHolzschrift-Shadow.svg#filename') format('svg');
}

@font-face {
    font-family: 'Enge Holzschrift';
    src: url('fonts/EngeHolzschrift/hinted-EngeHolzschrift.eot');
    src: 
    url('fonts/EngeHolzschrift/hinted-EngeHolzschrift.woff') format('woff'),
    url('fonts/EngeHolzschrift/hinted-EngeHolzschrift.woff2') format('woff2'),
    url('fonts/EngeHolzschrift/hinted-EngeHolzschrift.ttf') format('truetype'),
    url('fonts/EngeHolzschrift/hinted-EngeHolzschrift.svg#filename') format('svg');
}

body{
    font-family: 'ChanticleerRomanNF', serif;
    font-weight:normal;
}

h1,h2,h3,h4,h5 {
    font-family: 'Cliche','Enge Holzschrift', sans-serif;
    font-weight:normal;

    }
h1{
    font-size: 40px;
}
h2{
    font-size: 30px;
}
/* ==============================================
   GLOBAL STYLES
   ============================================== */
body{
    overflow-x: hidden;
background-image: linear-gradient(#310055,#D6005B);
background-repeat: no-repeat;
}

.spacer5 {
    height: 10px;
}

iframe{
    border: none;
    box-shadow: 10px 10px 20px 0 rgba(255, 255, 255, 0.466),-10px -10px 20px 0 rgba(255, 255, 255, 0.466);
}

/* ==============================================
   Header
   ============================================== */
.header{
    background-color: #3000556c;
    position: fixed;
    width: 100%;
    z-index: 999;
    height:30px;
    text-align: center;

}

.header h1{
    font-size: 2em;
    color: #D6005B;
    text-shadow: -1px -1px 0px rgba(255,255,255,0.3), 1px 1px 0px rgba(0,0,0,0.8);
}
/* ==============================================
bootstrap components
============================================== */

/* ======== Card ======== */
.card{
    background: rgba(255, 255, 255, 0);
    margin:0px 10px 0px 10px;
}
.card-body{
    background: rgba(88, 88, 88, 0.452);
    color:white;
    font-size: 3em;
    text-align: center;
}

/* ======== Carousel ======== */

.carousel{
    box-shadow: 2px 2px 5px black,-2px -2px 5px black;
}
.carousel-caption{
    text-shadow:0 0 10px black ,0 0 10px white;
}

.carousel-caption button:focus,.carousel-caption button:hover {
    background-color: rgb(29, 135, 156);
}
    
.carousel .btn-primary, #buyPlaylist{
    text-shadow: 0 0 5px white;
}

.carousel-indicators{
    bottom: -5px;
}
.carousel-indicators li {
        background-color: #310055;
        Width:0.8em;
        height: 0.8em;
        border-radius: 50px;
        margin-left: 15px;
        margin-right:15px;
}
.carousel-indicators li.active{
        background-color: #D6005B;
}
    .carousel-control-prev, .carousel-control-next{
    box-shadow: 0 0 10px rgb(255, 255, 255);
}
/* ======== modal ======== */
.modal-footer, .modal-header{
    border: none;
}
.modal-content{
    background-image: linear-gradient(#D6005B,#310055);
    color: white;
}
.modal-footer a.btn{
    box-shadow: 2px 2px 5px #D6005B,-2px -2px 5px #D6005B;
    text-shadow: 0 0 10px rgb(255, 255, 255);
    border: none;
}
#buyPlaylist{
    box-shadow: 2px 2px 5px #310055,-2px -2px 5px #310055;
    text-shadow: 0 0 10px rgb(255, 255, 255);
    border: none;
}

.modal .close{
 color:white;
}
.modal button.close:focus,.modal button.close:hover{
    background-color: transparent;
    color: white;
}

body.modal-open .blur-container{
    -webkit-filter: blur(4px);
    -moz-filter: blur(4px);
    -o-filter: blur(4px);
    -ms-filter: blur(4px);
    filter: blur(4px);
}
/* ==============================================
   Buttons
   ============================================== */

.btn-primary{
    border-color: #009688;
    background-color: rgba(45, 254, 233, 0.178);
    border-radius: 20px;
}
.btn-primary.playSong{
    border-radius: 5px;
    border:rgba(255, 255, 255, 0);
    
}
.btn-primary.playSong:focus,.btn-primary.playSong:hover{
    text-shadow: 0 0 10px rgb(255, 255, 255);
    
}

.btn-primary:focus,.btn-primary:hover{
    background-color: rgba(29, 133, 156, 0.493)
}
/* ... */

